# ambig-iac

./: .gitignore  CITATION.cff  LICENSE  README.md  evaluate.py  main.py  pyproject.toml
configs/: example.json
datasets/ambig-iac/0/: checks.rego  intent.txt  main.tf  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/1/: checks.rego  intent.txt  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/10/: checks.rego  intent.txt  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/100/: checks.rego  intent.txt  main.tf  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/101/: checks.rego  intent.txt  main.tf  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/102/: checks.rego  intent.txt  main.tf  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/103/: checks.rego  intent.txt  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/104/: checks.rego  intent.txt  main.tf  plan.json  prompt.txt  prompt_original.txt
datasets/ambig-iac/105/: checks.rego  intent.txt  main.tf  plan.json  prompt.txt  (+1 more)
scripts/: run.sh
src/: config.py  datasets.py  edit_actions.py  spec_converter.py  spec_generator.py  spec_types.py  user_proxy.py
src/methods/: __init__.py  best_of_n.py  dimension_aware_refinement.py  direct.py  direct_random_q.py  direct_random_q_anno.py  self_consistency.py  weighted_utils.py
src/utils/: build_deps.py  llm.py  utils.py
tests/: test_dimension_aware_refinement.py  test_edit_actions.py  test_llm.py  test_normalize_spec.py  test_spec_converter.py  test_weighted_utils.py
(+1587 files in other folders)
